networkpolicies/DEV-cluster/test-app-2/test-app-2-deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.permission-binder.io/template: deny-all-egress.yaml
    network-policy.permission-binder.io/template-path: networkpolicies/templates/deny-all-egress.yaml
    network-policy.permission-binder.io/template-version: f5ad00985f1ff16afecff77abf4e028430905b3d
  creationTimestamp: null
  name: test-app-2-deny-all-egress
  namespace: test-app-2
spec:
  podSelector: {}
  policyTypes:
  - Egress
